[package]
name = "compute-starter-kit-rust-default"
version = "0.1.0"
authors = []
edition = "2018"

[profile.release]
debug = true

[dependencies]
fastly = "^0.6.0"
rand = "0.8.3"
image = "0.23.14"
serde = { version = "1.0.124", features = ["derive","rc"] }
serde_json = "1.0"
typetag = "0.1"
reqwest = { version = "0.11", features = ["json"] }